refactor(user): convert User.club reference to clubId
User.club (Club) -> clubId (Long)
User.createUser now takes Long favoriteClubId.
User.updateProfile now takes Long clubId.

UserEntity keeps the @ManyToOne ClubEntity relation; from() stubs
ClubEntity with the id, toModel() extracts the id.

UserResponse / UserUpdateResponse / ApplicantResponse take an
explicit Club parameter (the user's favorite club). AdminUserResponse,
AdminUserDetailResponse and AdminEnrollmentResponse follow the same
pattern. BoardResponse / BoardDetailResponse / BoardTempDetailResponse
take a Club userClub for the board owner.
EnrollResponse / EnrollApplicantResponse / EnrollDetailResponse take
a Club for the applicant.

Service-side bulk fetches now also resolve favorite clubs:
- BoardService.loadRefs adds users' clubIds into the bulk Club fetch.
- BoardService.getBoard / getTempBoard fetch the owner's club.
- EnrollService gains a ClubFetchPort + resolveClubs helper and
  bulk-resolves applicant clubs before building responses (single
  and list paths).
- AdminService gains a ClubFetchPort + resolveUserClubs helper and
  uses it for getUser, getUserList, getBoardWithEnrollList.
- UserService.updateUserProfile passes a Long clubId into
  User.updateProfile, then re-resolves Club for the response.

OAuthService.signUp now hands Long favoriteClubId to User.createUser
(while still validating the club exists through clubFetchPort).

Cross-context FetchPort changes:
- user.ClubFetchPort + getClubs(List<Long>)
- new enroll.ClubFetchPort + EnrollClubFetchAdapter
- new admin.ClubFetchPort + AdminClubFetchAdapter

Verified with ./gradlew clean build -x test (full bootJar build).

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>